--- a/packages/billed-web/package.json
+++ b/packages/billed-web/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent"
+    "test": "jest --coverage --noStackTrace --silent",
+    "dev": "live-server"
   },
   "jest": {
     "verbose": false,
@@ -31,6 +32,21 @@
     "babel-jest": "^26.1.0",
     "jest": "^26.1.0",
     "jest-environment-jsdom": "^27.4.6",
-    "jest-html-reporter": "^3.1.3"
-  }
+    "jest-html-reporter": "^3.1.3",
+    "live-server": "^1.2.2"
+  },
+  "name": "billed-web",
+  "description": "Ce projet, dit frontend, est connecté à un service API backend que vous devez aussi lancer en local.",
+  "version": "1.0.0",
+  "main": "setup-jest.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Foxygene/Billed.git"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Foxygene/Billed/issues"
+  },
+  "homepage": "https://github.com/Foxygene/Billed#readme"
 }
